--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -14,10 +14,14 @@ body {
 }
 
 img {
-    padding: 5px;
+    padding: 3px;
     position: relative;
 }
 
+#showBox img {
+    height: 200px;
+    width:300px;
+}
 .box {
     transform: translate3d(0,0,0);
     transition: all 0.6s;
@@ -49,13 +53,10 @@ img {
 }
 
 
-#showBox img {
-    height: 200px;
-    width:300px;
-}
 
-.pic,
-.intro {
+
+#pic,
+#words {
     display: flex;
     flex: 1;
     padding: 10px;
