--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -22,6 +22,31 @@ img {
     height: 200px;
     width:300px;
 }
+
+#showBox {
+    background-color: #220a10;
+    color: #fff;
+    position: absolute;
+    left: 20%;
+    width: 50%;
+    height:300px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border-radius: 8px;
+    opacity:0;
+    transition: opacity 0.5s;
+}
+
+#pic,
+#words {
+    display: flex;
+    flex: 1;
+    padding: 10px;
+    justify-content: center;
+    align-items: center;
+    font-size:2em;
+}
 .box {
     transform: translate3d(0,0,0);
     transition: all 0.6s;
@@ -35,32 +60,4 @@ img {
     height: 50px;
     transform: translate3d(0,0,0);
     transition: all 2s;
-}
-
-#showBox {
-    color: #fff;
-    position: absolute;
-    left: 20%;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    height:300px;
-    width: 50%;
-    border-radius: 8px;
-    background-color: #220a10;
-    opacity:0;
-    transition: opacity 0.5s;
-}
-
-
-
-
-#pic,
-#words {
-    display: flex;
-    flex: 1;
-    padding: 10px;
-    justify-content: center;
-    align-items: center;
-    font-size:2rem;
 }
