--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -14,13 +14,8 @@ body {
 }
 
 img {
-    padding: 3px;
     position: relative;
-}
-
-#showBox img {
-    height: 200px;
-    width:300px;
+    padding: 3px;
 }
 
 #showBox {
@@ -29,35 +24,32 @@ img {
     position: absolute;
     left: 20%;
     width: 50%;
-    height:300px;
+    height:280px;
     display: flex;
     justify-content: space-around;
-    align-items: center;
-    border-radius: 8px;
+    border-radius: 16px;
     opacity:0;
     transition: opacity 0.5s;
 }
 
-#pic,
+#pic{
+    display:flex;
+    flex:1;
+    align-items: center;
+    padding:10px;}
+
 #words {
     display: flex;
     flex: 1;
-    padding: 10px;
-    justify-content: center;
     align-items: center;
+    padding: 13px;
     font-size:2em;
+    font-family: FontAwesome, serif;
 }
+
+
 .box {
     transform: translate3d(0,0,0);
     transition: all 0.6s;
 }
 
-.box .info {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 50px;
-    transform: translate3d(0,0,0);
-    transition: all 2s;
-}
