--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -17,13 +17,12 @@ img {
     position: relative;
     padding: 3px;
 }
-
 #showBox {
     background-color: #220a10;
     color: #fff;
     position: absolute;
     left: 20%;
-    width: 50%;
+    width: 500px;
     height:280px;
     display: flex;
     justify-content: space-around;
@@ -46,10 +45,7 @@ img {
     font-size:2em;
     font-family: FontAwesome, serif;
 }
-
-
 .box {
     transform: translate3d(0,0,0);
     transition: all 0.6s;
 }
-
